--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,7 @@
         <javax.websocket.api.version>1.1</javax.websocket.api.version>
         <tyrus.version>1.13.1</tyrus.version>
         <tyrus.grizzly.version>1.2.1</tyrus.grizzly.version>
-        <javax.json.api.version>1.1</javax.json.api.version>
-        <javax.json.version>1.1</javax.json.version>
+        <jackson.version>2.9.1</jackson.version>
     </properties>
 
     <dependencies>
@@ -37,14 +36,9 @@
             <version>${tyrus.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.json</groupId>
-            <artifactId>javax.json-api</artifactId>
-            <version>${javax.json.api.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish</groupId>
-            <artifactId>javax.json</artifactId>
-            <version>${javax.json.version}</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
 
